style.css
*
{
    padding: o;
    margin: 0;
    box-sizing: border-box;
}

body
{
    background-size: cover;
    font-family: sans-serif;
    background-position: center;
    background-color: whitesmoke;
}
.menu-bar
{  
    text-align: center;
    color:white;
    background: rgb(246, 248, 246);
    border-bottom:5px  solid whitesmoke;
    box-shadow:  5px black;
    padding-bottom: 20px;
    
    
}
.logo{
  float: left;
  width: 70px;
  margin: 30px;
  margin-bottom: 10px;
  margin-top: 10px;

}
.menu-bar ul 
{
  
    display: inline-flex;
    list-style: none;
    color: green;
    padding-right: 50px;
    
}
.menu-bar ul li
{
    width: 120px;
    margin: 15px;
    padding: 15px;
}
.menu-bar ul li a
{   
    text-decoration: none;
    color: green;
    width: 50px;
    font-weight: bolder;
    font-size: medium;
    
}
.menu-bar ul li a:hover{
  color: darkgrey;
}
.active,.menu-bar ul li:hover 
{
    border-radius: 3px;
    z-index: index 999;;
}
.menu-bar .fa
{
    margin-right: 8px;
}

.dropdown-menu-1{
    display: none;
    background: green;
  
}
.active, .dropdown-menu-1 a{
  color: #fff;
}
.active,.menu-bar ul li:hover .dropdown-menu-1{
    display: block;
    position: absolute;
    background: rgb(246, 248, 246);
    z-index: 999;
}
.menu-bar ul li:hover .dropdown-menu-1 ul{
    display: block;
    margin: 5px; 
}
.menu-bar ul li:hover .dropdown-menu-1 ul li{
    width: 150px;
    padding: 10px;
    border-bottom: 1px dotted #fff;
    background: transparent;
    border-radius: 0;
    text-align: left;
}
.menu-bar ul li:hover .dropdown-menu-1 ul li:last-child{
    border-bottom: none;
}
.header {
    padding: 40px; 
    text-align: center; 
    background: green;
    color: white; 
    width: auto;
    
    border-radius: 15px;
  }
  .header h1 {
    font-size: 80px;
  }
  .navbar a.right {
    float: right;
  }
  .navbar {
    overflow: hidden;
    background-color: white;
  }
  .navbar a {
    float: left;
    display: block;
    color: green;
    text-align: center;
    padding: 14px 20px;
    text-decoration: none;
  }
    .navbar a:hover {
        background-color: gray;
        color: white;
  }
  .row {  
    display: flex;
    flex-wrap: wrap;
  }
  .container{width: 95%%;
    height: 100vh;
    background: white; 
    display: flex;
    align-items: center;
    justify-content: center;
  }
  .swiper{
    width: 100%;
    height: fit-content;
    margin-top: 50px;
  }
  .swiper-slide img{
    width: 100%;
    border: 2px solid green;
    border-radius: 15px;
  }
  .swiper .swiper-button-prev. .swiper-button-next{
    color: rgb(17, 178, 17);
  }
  .swiper.swiper-pagination-bullet-active{
    color: white;
  }
  
@media screen (max-width:500px;) {
  .menu-bar{
    justify-content: center;
    align-items: center;
    padding: 500px;
  }
  .logo{
    display: none;
  }
}

